--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "firebase": "^8.1.1",
+    "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "next": "10.0.3",
     "react": "17.0.1",
