--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.11.0",
+    "axios": "^0.21.0",
     "firebase": "^8.1.1",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-currency-format": "^1.0.0",
